fixed footer spacing

--- a/css/master.css
+++ b/css/master.css
@@ -141,7 +141,7 @@ body {
   width: 5vmin;
   fill: var(--l-grey);
   padding: 10px;
-  margin: 20px auto;
+  margin: 20px auto -20px auto;
 }
 
 .insta-footer {
